src/test/ui/issues/40000-49999/issue-46101.stderr
error[E0433]: failed to resolve: partially resolved path in a derive macro
  --> $DIR/issue-46101.rs:3:10
   |
LL | #[derive(Foo::Anything)]
   |          ^^^^^^^^^^^^^ partially resolved path in a derive macro

error[E0433]: failed to resolve: partially resolved path in a derive macro
  --> $DIR/issue-46101.rs:3:10
   |
LL | #[derive(Foo::Anything)]
   |          ^^^^^^^^^^^^^ partially resolved path in a derive macro

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0433`.
